--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
           <header class="header">
             <a href="#" class="logo">
-              <img src="/img/icons/logo.png" alt="chocco logo" class="logo__pic">
+              <img src="./img/icons/logo.png" alt="chocco logo" class="logo__pic">
             </a>
             <div class="header__wrapper">
               <nav class="nav">
@@ -48,7 +48,7 @@
             </div>
             <a href="tel:+78009039090" class="phone">
               <span class="phone__picture">
-                <img src="/img/icons/phone.png" alt="" class="phone__icon">
+                <img src="./img/icons/phone.png" alt="" class="phone__icon">
               </span>
               <span class="phone__number">8 800 903 90 90</span>
             </a>
@@ -113,7 +113,7 @@
               <li class="benefits__item benefit">
                 <div class="benefit__image">
                   <div class="benefit__wrapper">
-                    <img src="/img/icons/happyman.svg" alt="happy human" class="benefit__icon"></img>
+                    <img src="./img/icons/happyman.svg" alt="happy human" class="benefit__icon"></img>
                   </div>
                 </div>
                 <div class="benefit__text">
@@ -128,7 +128,7 @@
               <li class="benefits__item benefit">
                 <div class="benefit__image">
                   <div class="benefit__wrapper">
-                    <img src="/img/icons/smile.svg" alt="smile" class="benefit__icon"></img>
+                    <img src="./img/icons/smile.svg" alt="smile" class="benefit__icon"></img>
                   </div>
                 </div>
                 <div class="benefit__text">
@@ -143,7 +143,7 @@
               <li class="benefits__item benefit">
                 <div class="benefit__image">
                   <div class="benefit__wrapper">
-                    <img src="/img/icons/biceps.svg" alt="biceps" class="benefit__icon"></img>
+                    <img src="./img/icons/biceps.svg" alt="biceps" class="benefit__icon"></img>
                   </div>
                 </div>
                 <div class="benefit__text">
@@ -169,7 +169,7 @@
             <div class="review__display">
               <div class="review__display-inner">
                 <div class="review__avatar">
-                  <img src="/img/alyona.png" alt="фото девушки" class="review__avatar-img">
+                  <img src="./img/alyona.png" alt="фото девушки" class="review__avatar-img">
                 </div>
                 <article class="review__content">
                   <h3 class="review__title">Лучший перекус</h3>
@@ -187,17 +187,17 @@
             <ul class="review__switcher">
               <li class="review__switcher-item interactive-avatar interactive-avatar--active">
                 <a href="#" class="interactive-avatar__link">
-                  <img src="/img/alyona.png" alt="" class="interactive-avatar__img">
+                  <img src="./img/alyona.png" alt="" class="interactive-avatar__img">
                 </a>
               </li>
               <li class="review__switcher-item interactive-avatar">
                 <a href="#" class="interactive-avatar__link">
-                  <img src="/img/maria.jpg" alt="" class="interactive-avatar__img">
+                  <img src="./img/maria.jpg" alt="" class="interactive-avatar__img">
                 </a>
               </li>
               <li class="review__switcher-item interactive-avatar">
                 <a href="#" class="interactive-avatar__link">
-                  <img src="/img/vadim.png" alt="" class="interactive-avatar__img">
+                  <img src="./img/vadim.png" alt="" class="interactive-avatar__img">
                 </a>
               </li>
             </ul> 
@@ -215,37 +215,37 @@
             <div class="form__col">
               
               <div class="form__row">
-                <label for="" class="form__block">
+                <label class="form__block">
                   <div class="form__title">Имя</div>
                   <input type="text" class="form__input">
                 </label>
-                <label for="" class="form__block">
+                <label class="form__block">
                   <div class="form__title">Телефон</div>
                   <input type="text" class="form__input">
                 </label>
               </div>
               
               <div class="form__row">
-                <label for="" class="form__block">
+                <label class="form__block">
                   <div class="form__title">Улица</div>
                   <input type="text" class="form__input">
                 </label>
               </div>
 
               <div class="form__row">
-                <label for="" class="form__block">
+                <label class="form__block">
                   <div class="form__title">Дом</div>
                   <input type="text" class="form__input">
                 </label>
-                <label for="" class="form__block">
+                <label class="form__block">
                   <div class="form__title">Корпус</div>
                   <input type="text" class="form__input">
                 </label>
-                <label for="" class="form__block">
+                <label class="form__block">
                   <div class="form__title">Квартира</div>
                   <input type="text" class="form__input">
                 </label>
-                <label for="" class="form__block">
+                <label class="form__block">
                   <div class="form__title">Этаж</div>
                   <input type="text" class="form__input">
                 </label>
@@ -254,9 +254,9 @@
 
             <div class="form__col">
               <div class="form__row">
-                <label for="" class="form__block">
+                <label class="form__block">
                   <div class="form__title">Комментарий</div>
-                  <textarea name="" id="" cols="30" rows="10" class="form__input form__input--textarea"></textarea>
+                  <textarea class="form__input form__input--textarea"></textarea>
                 </label>
               </div>
 
@@ -295,31 +295,31 @@
       <nav class="fixed-menu">
         <ul class="fixed-menu__list">
           <li class="fixed-menu__item fixed-menu__item--active">
-            <a href="" class="fixed-menu__link"></a>
+            <a href="#" class="fixed-menu__link"></a>
           </li>
           <li class="fixed-menu__item">
-            <a href="" class="fixed-menu__link"></a>
+            <a href="#" class="fixed-menu__link"></a>
           </li>
           <li class="fixed-menu__item">
-            <a href="" class="fixed-menu__link"></a>
+            <a href="#" class="fixed-menu__link"></a>
           </li>
           <li class="fixed-menu__item">
-            <a href="" class="fixed-menu__link"></a>
+            <a href="#" class="fixed-menu__link"></a>
           </li>
           <li class="fixed-menu__item">
-            <a href="" class="fixed-menu__link"></a>
+            <a href="#" class="fixed-menu__link"></a>
           </li>
           <li class="fixed-menu__item">
-            <a href="" class="fixed-menu__link"></a>
+            <a href="#" class="fixed-menu__link"></a>
           </li>
           <li class="fixed-menu__item">
-            <a href="" class="fixed-menu__link"></a>
+            <a href="#" class="fixed-menu__link"></a>
           </li>
           <li class="fixed-menu__item">
-            <a href="" class="fixed-menu__link"></a>
+            <a href="#" class="fixed-menu__link"></a>
           </li>
           <li class="fixed-menu__item">
-            <a href="" class="fixed-menu__link"></a>
+            <a href="#" class="fixed-menu__link"></a>
           </li>
         </ul>
       </nav>
